Updating one section to be grey

--- a/index.html
+++ b/index.html
@@ -37,20 +37,22 @@
     </section>
 
     <section class="about-kata">
-        <h1>About KATA NE</h1>
-        <p>Write about KATA NE here, Kelly! </p>
-        <div class="row">
-            <div class="row-col">
-                <h3>Manifesto</h3>
-                <p> Maybe a link to the manifesto? </p>
-            </div>
-            <div class="row-col">
-                <h3>SciFi</h3>
-                <p> Insert SciFi Things About? </p>
-            </div>
-            <div class="row-col">
-                <h3>PlaceHolder</h3>
-                <p> Maybe more stuff!! </p>
+        <div class="about-kata-rows">
+            <h1>About KATA NE</h1>
+            <p>Write about KATA NE here, Kelly! </p>
+            <div class="row">
+                <div class="row-col">
+                    <h3>Manifesto</h3>
+                    <p> Maybe a link to the manifesto? </p>
+                </div>
+                <div class="row-col">
+                    <h3>SciFi</h3>
+                    <p> Insert SciFi Things About? </p>
+                </div>
+                <div class="row-col">
+                    <h3>PlaceHolder</h3>
+                    <p> Maybe more stuff!! </p>
+                </div>
             </div>
         </div>
     </section>
