Split up the rows for resources

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
     </section>
 
+<!---------ABOUT KATA SECTION-------------->
+
     <section class="about-kata">
         <div class="about-kata-rows">
             <h1>About KATA NE</h1>
@@ -57,10 +59,11 @@
         </div>
     </section>
 
+<!---------RESOURCES SECTION-------------->
     <section class="resources">
         <h1>Resources</h1>
         <p>This where be be placing all the Resource blockies</p>
-        <div class="row">
+        <div class="row"> 
             <div class="resources-row">
                 <img src="images/raisapeak.png">
                 <div class="layer">
@@ -79,6 +82,8 @@
                     <h3>Being a Learner</h3>
                 </div>
             </div>
+        </div>
+        <div class="row">    
             <div class="resources-row">
                 <img src="images/raisapeak.png">
                 <div class="layer">
