--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </title>
 </head>
 <body>
+    <section class="mainbody">
     <section class="header">
         <nav>
             <a href="index.html"><img src="images/KSNE_Logo.png"></a>
@@ -107,14 +108,14 @@
 
     <section class="footer">
         <h4>About Us</h4>
-        <p>some text</p>
+        <p>Visit our socials or contact me</p>
         <div class="icons">
             <a href="https://www.linkedin.com/in/kelly-mallery-123b0628/"><i class="fa fa-linkedin"></i></a>
             <a href="https://images.unsplash.com/photo-1442458370899-ae20e367c5d8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80"><i class="fa fa-instagram"></i></a>
         </div>
     </section>
 
-
+</section>
     <script>
         var navLinks = document.getElementById("navLinks");
 
